--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "eslint": "^8.34.0",
+    "prettier": "^2.8.4",
     "typescript": "^4.6.3"
   },
   "scripts": {
