--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": "@react-native-community",
-  "rules": {
-    "react/react-in-jsx-scope": "off"
-  }
+  "extends": "@react-native-community"
 }
